set up load API to be able to externally set a default loader (avoid class loader)